[tool.poetry]
name = "b7w-cli"
version = "0.1.2"
description = "Useful cli for photos and other things"
authors = ["B7W <b7w@isudo.ru>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/b7w/b7w-cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
pytest-cov = "^2.8"
pytest-flakes = "^4.0"

[tool.poetry.scripts]
b7w = "b7w_cli.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
