[project]
name = "b7w-cli"
version = "0.3.2"
description = "Useful cli for photos and other things"
authors = [
    {name = "B7W", email = "b7w@isudo.ru"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/b7w/b7w-cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
toml = "^0.10.1"
python-dateutil = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-flakes = "^4.0"

[project.scripts]
b7w = "b7w_cli.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
